<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_addCars"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_dashboard" />

    <item
        android:id="@+id/navigation_listSpkCash"
        android:icon="@drawable/cash_payment"
        android:title="@string/menu_spkListCash" />

    <item
        android:id="@+id/navigation_listSpkCredit"
        android:icon="@drawable/credit_payment"
        android:title="@string/menu_spkListCredit" />

    <item
        android:id="@+id/navigation_listDO"
        android:icon="@drawable/ic_list_do"
        android:title="@string/listDO" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_setting" />

</menu>